# Labyrinth

./: README.md
Project/: .gitignore  CMakeLists.txt  LICENSE
Project/project_resources/: MANUAL_INSTALL_README.txt
Project/project_resources/application_files/resources/: Labyrinth.rc
Project/project_resources/configuration_files/: versions_config.env  vulkan_installer_config_dev.ini  vulkan_installer_config_install.ini
Project/project_resources/docs_files/: Doxyfile.in
Project/project_resources/install_files/translations/: translations_en.cmake  translations_it.cmake
Project/project_resources/manual_install_files/: linux.sh  mac.sh  windows.bat
Project/project_resources/scripts/building_scripts/: mingwBuild.bat  unixBuild.sh  windowsBuild.bat
Project/project_resources/scripts/prerequisite_scripts/: linux.sh  mac.sh  windows.bat  windows_minGW_extension.bat  windows_python.bat
Project/project_resources/scripts/vulkan_scripts/: vulkan_installer_linux.sh  vulkan_installer_mac.sh  vulkan_installer_windows.bat
Project/src/: Labyrinth.cpp  Labyrinth.hpp
